--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,10 +12,9 @@ body {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#ytplayer {
+  width: 600px;
+  height: 350px;
 }
 
 
