--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,7 +29,7 @@ body {
 
 .recipe-card {
   /* width: 200px; */
-  margin: 0 auto;
+  padding: 20px;
   overflow: hidden;
 }
 
@@ -49,6 +49,10 @@ body {
   /* padding: 100px */
 }
 
+.recipe-card:hover{
+  background-color: rgb(236, 229, 229);
+}
+
 #ytplayer {
   width: 600px;
   height: 350px;
@@ -61,9 +65,6 @@ body {
   
 }
 
-#hero {
-  
-}
 
 #main-text {
   color: black;
