--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,6 +93,13 @@ body {
   border-bottom: 1px black solid;
 }
 
+.review-message-text {
+  border-bottom: 1px black solid;
+  width: 400px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
 .single-recipe-info {
   width: 300px;
   /* height: 100%; */
@@ -101,6 +108,10 @@ body {
 
 .single-recipe-card {
   margin: 0 auto;
+}
+
+.delete {
+  margin-top: 1rem;
 }
 
 #ytplayer {
